@@ -41,10 +41,12 @@ import com.gargoylesoftware.htmlunit.WebResponse;
 import com.gargoylesoftware.htmlunit.WebResponseData;
 import com.gargoylesoftware.htmlunit.WebResponseListener;
 import com.gargoylesoftware.htmlunit.html.DomNode;
+import com.gargoylesoftware.htmlunit.html.DomNodeUtil;
 import com.gargoylesoftware.htmlunit.html.HtmlButton;
 import com.gargoylesoftware.htmlunit.html.HtmlElement;
 import com.gargoylesoftware.htmlunit.html.HtmlElementUtil;
 import com.gargoylesoftware.htmlunit.html.HtmlForm;
+import com.gargoylesoftware.htmlunit.html.HtmlFormUtil;
 import com.gargoylesoftware.htmlunit.html.HtmlImage;
 import com.gargoylesoftware.htmlunit.html.HtmlInput;
 import com.gargoylesoftware.htmlunit.html.HtmlPage;
@@ -56,9 +58,9 @@ import com.gargoylesoftware.htmlunit.util.NameValuePair;
 import com.gargoylesoftware.htmlunit.util.WebResponseWrapper;
 import com.gargoylesoftware.htmlunit.xml.XmlPage;
 import com.google.common.net.HttpHeaders;
-import hudson.ClassicPluginStrategy;
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.CloseProofOutputStream;
-import hudson.DNSMultiCast;
 import hudson.DescriptorExtensionList;
 import hudson.EnvVars;
 import hudson.Extension;
@@ -69,6 +71,8 @@ import hudson.Main;
 import hudson.PluginManager;
 import hudson.Util;
 import hudson.WebAppMain;
+import hudson.console.AnnotatedLargeText;
+import hudson.init.InitMilestone;
 import hudson.model.AbstractBuild;
 import hudson.model.AbstractProject;
 import hudson.model.BuildListener;
@@ -82,22 +86,26 @@ import hudson.model.FreeStyleProject;
 import hudson.model.Hudson;
 import hudson.model.Item;
 import hudson.model.JDK;
+import hudson.model.Job;
 import hudson.model.Label;
 import hudson.model.Node;
 import hudson.model.Queue;
 import hudson.model.Result;
 import hudson.model.RootAction;
 import hudson.model.Run;
+import hudson.model.Slave;
 import hudson.model.TaskListener;
 import hudson.model.TopLevelItem;
 import hudson.model.UpdateSite;
 import hudson.model.User;
 import hudson.model.View;
+import hudson.model.queue.QueueTaskFuture;
 import hudson.remoting.Which;
 import hudson.security.ACL;
 import hudson.security.AbstractPasswordBasedSecurityRealm;
 import hudson.security.GroupDetails;
 import hudson.security.csrf.CrumbIssuer;
+import hudson.slaves.Cloud;
 import hudson.slaves.ComputerConnector;
 import hudson.slaves.ComputerLauncher;
 import hudson.slaves.DumbSlave;
@@ -122,6 +130,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
+import java.io.UncheckedIOException;
 import java.lang.annotation.Annotation;
 import java.lang.management.ThreadInfo;
 import java.lang.reflect.Array;
@@ -130,22 +139,25 @@ import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
+import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.SocketTimeoutException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLConnection;
+import java.nio.channels.ClosedByInterruptException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
+import java.security.SecureRandom;
 import java.util.AbstractMap;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -155,23 +167,29 @@ import java.util.UUID;
 import java.util.concurrent.Callable;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Future;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.jar.Manifest;
+import java.util.logging.ConsoleHandler;
 import java.util.logging.Filter;
+import java.util.logging.Formatter;
+import java.util.logging.Handler;
 import java.util.logging.Level;
 import java.util.logging.LogRecord;
 import java.util.logging.Logger;
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
 import javax.servlet.ServletContext;
 import javax.servlet.ServletContextEvent;
-
 import jenkins.model.Jenkins;
 import jenkins.model.JenkinsAdaptor;
 import jenkins.model.JenkinsLocationConfiguration;
+import jenkins.model.ParameterizedJobMixIn;
 import jenkins.security.ApiTokenProperty;
+import jenkins.security.MasterToSlaveCallable;
+
+import net.sf.json.JSON;
 import net.sf.json.JSONObject;
 import net.sourceforge.htmlunit.corejs.javascript.Context;
 import net.sourceforge.htmlunit.corejs.javascript.ContextFactory;
@@ -185,7 +203,9 @@ import org.apache.commons.beanutils.PropertyUtils;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.tuple.ImmutablePair;
+import org.eclipse.jetty.http.HttpCompliance;
 import org.eclipse.jetty.http.MimeTypes;
+import org.eclipse.jetty.http.UriCompliance;
 import org.eclipse.jetty.security.HashLoginService;
 import org.eclipse.jetty.security.LoginService;
 import org.eclipse.jetty.security.UserStore;
@@ -198,38 +218,25 @@ import org.eclipse.jetty.util.thread.QueuedThreadPool;
 import org.eclipse.jetty.webapp.Configuration;
 import org.eclipse.jetty.webapp.WebAppContext;
 import org.eclipse.jetty.webapp.WebXmlConfiguration;
-import org.hamcrest.Matchers;
+import org.eclipse.jetty.websocket.server.config.JettyWebSocketServletContainerInitializer;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.notNullValue;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 import org.junit.internal.AssumptionViolatedException;
-import static org.junit.matchers.JUnitMatchers.containsString;
+import org.junit.rules.DisableOnDebug;
 import org.junit.rules.MethodRule;
 import org.junit.rules.TemporaryFolder;
 import org.junit.rules.TestRule;
+import org.junit.rules.Timeout;
 import org.junit.runner.Description;
 import org.junit.runners.model.FrameworkMethod;
 import org.junit.runners.model.Statement;
-import com.gargoylesoftware.htmlunit.html.DomNodeUtil;
-import com.gargoylesoftware.htmlunit.html.HtmlFormUtil;
-import hudson.console.AnnotatedLargeText;
-import hudson.init.InitMilestone;
-import hudson.model.Job;
-import hudson.model.Slave;
-import hudson.model.queue.QueueTaskFuture;
-
-import java.net.HttpURLConnection;
-import java.nio.channels.ClosedByInterruptException;
-import java.util.LinkedList;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.logging.ConsoleHandler;
-import java.util.logging.Formatter;
-import java.util.logging.Handler;
-import jenkins.model.ParameterizedJobMixIn;
-import jenkins.security.MasterToSlaveCallable;
-import org.junit.rules.DisableOnDebug;
-import org.junit.rules.Timeout;
 import org.junit.runners.model.TestTimedOutException;
 import org.jvnet.hudson.test.recipes.Recipe;
 import org.jvnet.hudson.test.recipes.WithTimeout;
@@ -251,12 +258,12 @@ import org.xml.sax.SAXException;
 /**
  * JUnit rule to allow test cases to fire up a Jenkins instance.
  *
- * @see <a href="http://wiki.jenkins-ci.org/display/JENKINS/Unit+Test">Wiki article about unit testing in Jenkins</a>
+ * @see <a href="https://www.jenkins.io/doc/developer/testing/">Wiki article about unit testing in Jenkins</a>
  * @author Stephen Connolly
  * @since 1.436
  * @see RestartableJenkinsRule
  */
-@SuppressWarnings({"deprecation","rawtypes"})
+@SuppressWarnings({"deprecation", "rawtypes"})
 public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
     protected TestEnvironment env;
@@ -289,14 +296,14 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     /**
      * {@link Runnable}s to be invoked at {@link #after()} .
      */
-    protected List<LenientRunnable> tearDowns = new ArrayList<LenientRunnable>();
+    protected List<LenientRunnable> tearDowns = new ArrayList<>();
 
-    protected List<JenkinsRecipe.Runner> recipes = new ArrayList<JenkinsRecipe.Runner>();
+    protected List<JenkinsRecipe.Runner> recipes = new ArrayList<>();
 
     /**
      * Remember {@link WebClient}s that are created, to release them properly.
      */
-    private List<WebClient> clients = new ArrayList<WebClient>();
+    private List<WebClient> clients = new ArrayList<>();
 
     /**
      * JavaScript "debugger" that provides you information about the JavaScript call stack
@@ -340,8 +347,6 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
     private boolean origDefaultUseCache = true;
 
-    private static final Charset UTF8 = Charset.forName("UTF-8");
-
     public Jenkins getInstance() {
         return jenkins;
     }
@@ -353,7 +358,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     public void before() throws Throwable {
         for (Handler h : Logger.getLogger("").getHandlers()) {
             if (h instanceof ConsoleHandler) {
-                ((ConsoleHandler) h).setFormatter(new DeltaSupportLogFormatter());
+                h.setFormatter(new DeltaSupportLogFormatter());
             }
         }
 
@@ -443,7 +448,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         jenkins.getJDKs().add(new JDK("default", System.getProperty("java.home")));
     }
     
-    private static void dumpThreads() {
+    static void dumpThreads() {
         ThreadInfo[] threadInfos = Functions.getThreadInfos();
         Functions.ThreadGroupMap m = Functions.sortThreadsAndGetGroupMap(threadInfos);
         for (ThreadInfo ti : threadInfos) {
@@ -492,20 +497,29 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
                     tl.onTearDown();
             }
 
-            // cancel pending asynchronous operations, although this doesn't really seem to be working
+            // cancel asynchronous operations as best as we can
             for (WebClient client : clients) {
-                // unload the page to cancel asynchronous operations
-                try {
+                // wait until current asynchronous operations have finished executing
+                WebClientUtil.waitForJSExec(client);
+                // unload the page to prevent new asynchronous operations from being scheduled
+                try (client) {
                     client.getPage("about:blank");
                 } catch (IOException e) {
-                    // ignore
+                    // should never happen when loading "about:blank"
+                    throw new UncheckedIOException(e);
                 }
-                client.close();
             }
             clients.clear();
 
         } finally {
             _stopJenkins(server, tearDowns, jenkins);
+
+            // Jenkins creates ClassLoaders for plugins that hold on to file descriptors of its jar files,
+            // but because there's no explicit dispose method on ClassLoader, they won't get GC-ed until
+            // at some later point, leading to possible file descriptor overflow. So encourage GC now.
+            // see https://bugs.java.com/bugdatabase/view_bug.do?bug_id=4950148
+            // TODO use URLClassLoader.close() in Java 7
+            System.gc();
 
             try {
                 env.dispose();
@@ -566,10 +580,12 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     /**
      * Backward compatibility with JUnit 4.8.
      */
+    @Override
     public Statement apply(Statement base, FrameworkMethod method, Object target) {
         return apply(base,Description.createTestDescription(method.getMethod().getDeclaringClass(), method.getName(), method.getAnnotations()));
     }
 
+    @Override
     public Statement apply(final Statement base, final Description description) {
         if (description.getAnnotation(WithoutJenkins.class) != null) {
             // request has been made to not create the instance for this test method
@@ -653,14 +669,17 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     @SuppressWarnings("serial")
     public static class BreakException extends Exception {}
 
+    @Override
     public String getIconFileName() {
         return null;
     }
 
+    @Override
     public String getDisplayName() {
         return null;
     }
 
+    @Override
     public String getUrlName() {
         return "self";
     }
@@ -780,6 +799,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         context.setConfigurations(new Configuration[]{new WebXmlConfiguration()});
         context.addBean(new NoListenerConfiguration(context));
         server.setHandler(context);
+        JettyWebSocketServletContainerInitializer.configure(context, null);
         context.setMimeTypes(MIME_TYPES);
         context.getSecurityHandler().setLoginService(loginServiceSupplier.get());
         context.setResourceBase(WarExploder.getExplodedDir().getPath());
@@ -788,6 +808,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         HttpConfiguration config = connector.getConnectionFactory(HttpConnectionFactory.class).getHttpConfiguration();
         // use a bigger buffer as Stapler traces can get pretty large on deeply nested URL
         config.setRequestHeaderSize(12 * 1024);
+        config.setHttpCompliance(HttpCompliance.RFC7230);
+        config.setUriCompliance(UriCompliance.LEGACY);
         connector.setHost("localhost");
         if (System.getProperty("port") != null) {
             connector.setPort(Integer.parseInt(System.getProperty("port")));
@@ -894,6 +916,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         return env.temporaryDirectoryAllocator.allocate();
     }
 
+    @NonNull
     public DumbSlave createSlave(boolean waitForChannelConnect) throws Exception {
         DumbSlave slave = createSlave();
         if (waitForChannelConnect) {
@@ -919,6 +942,11 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         }
     }
 
+    /**
+     * Creates and attaches a new outbound agent.
+     * @see InboundAgentRule
+     */
+    @NonNull
     public DumbSlave createSlave() throws Exception {
         return createSlave("",null);
     }
@@ -926,7 +954,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     /**
      * Creates and launches a new slave on the local host.
      */
-    public DumbSlave createSlave(Label l) throws Exception {
+    @NonNull
+    public DumbSlave createSlave(@CheckForNull Label l) throws Exception {
     	return createSlave(l, null);
     }
 
@@ -941,7 +970,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     /** @see #createDummySecurityRealm */
     public static class DummySecurityRealm extends AbstractPasswordBasedSecurityRealm {
 
-        private final Map<String,Set<String>> groupsByUser = new HashMap<String,Set<String>>();
+        private final Map<String,Set<String>> groupsByUser = new HashMap<>();
 
         DummySecurityRealm() {}
 
@@ -955,7 +984,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         @Override
         public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException,
                 DataAccessException {
-            List<GrantedAuthority> auths = new ArrayList<GrantedAuthority>();
+            List<GrantedAuthority> auths = new ArrayList<>();
             auths.add(AUTHENTICATED_AUTHORITY);
             Set<String> groups = groupsByUser.get(username);
             if (groups != null) {
@@ -983,11 +1012,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
         /** Associate some groups with a username. */
         public void addGroups(String username, String... groups) {
-            Set<String> gs = groupsByUser.get(username);
-            if (gs == null) {
-                groupsByUser.put(username, gs = new TreeSet<String>());
-            }
-            gs.addAll(Arrays.asList(groups));
+            Set<String> gs = groupsByUser.computeIfAbsent(username, k -> new TreeSet<>());
+            gs.addAll(List.of(groups));
         }
 
     }
@@ -1000,28 +1026,35 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         return new URL("http://localhost:"+localPort+contextPath+"/");
     }
 
-    public DumbSlave createSlave(EnvVars env) throws Exception {
+    @NonNull
+    public DumbSlave createSlave(@CheckForNull EnvVars env) throws Exception {
         return createSlave("",env);
     }
 
-    public DumbSlave createSlave(Label l, EnvVars env) throws Exception {
+    @NonNull
+    public DumbSlave createSlave(@CheckForNull Label l, @CheckForNull EnvVars env) throws Exception {
         return createSlave(l==null ? null : l.getExpression(), env);
     }
 
     /**
      * Creates a slave with certain additional environment variables
      */
-    public DumbSlave createSlave(String labels, EnvVars env) throws Exception {
+    @NonNull
+    public DumbSlave createSlave(@CheckForNull String labels, @CheckForNull EnvVars env) throws Exception {
         synchronized (jenkins) {
             int sz = jenkins.getNodes().size();
             return createSlave("slave" + sz,labels,env);
     	}
     }
 
-    public DumbSlave createSlave(String nodeName, String labels, EnvVars env) throws Exception {
+    @NonNull
+    public DumbSlave createSlave(@NonNull String nodeName, @CheckForNull String labels, @CheckForNull EnvVars env) throws Exception {
         synchronized (jenkins) {
-            DumbSlave slave = new DumbSlave(nodeName, "dummy",
-    				createTmpDir().getPath(), "1", Node.Mode.NORMAL, labels==null?"":labels, createComputerLauncher(env), RetentionStrategy.NOOP, Collections.EMPTY_LIST);                        
+            DumbSlave slave = new DumbSlave(nodeName, new File(jenkins.getRootDir(), "agent-work-dirs/" + nodeName).getAbsolutePath(), createComputerLauncher(env));
+            if (labels != null) {
+                slave.setLabelString(labels);
+            }
+            slave.setRetentionStrategy(RetentionStrategy.NOOP);
     		jenkins.addNode(slave);
     		return slave;
     	}
@@ -1030,7 +1063,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     public PretendSlave createPretendSlave(FakeLauncher faker) throws Exception {
         synchronized (jenkins) {
             int sz = jenkins.getNodes().size();
-            PretendSlave slave = new PretendSlave("slave" + sz, createTmpDir().getPath(), "", createComputerLauncher(null), faker);
+            String nodeName = "slave" + sz;
+            PretendSlave slave = new PretendSlave(nodeName, new File(jenkins.getRootDir(), "agent-work-dirs/" + nodeName).getAbsolutePath(), "", createComputerLauncher(null), faker);
     		jenkins.addNode(slave);
     		return slave;
         }
@@ -1038,14 +1072,16 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
     /**
      * Creates a launcher for starting a local agent.
-     *
+     * This is an outbound agent using {@link SimpleCommandLauncher}.
      * @param env
-     *      Environment variables to add to the slave process. Can be null.
+     *      Environment variables to add to the slave process. Can be {@code null}.
+     * @see InboundAgentRule
      */
-    public ComputerLauncher createComputerLauncher(EnvVars env) throws URISyntaxException, IOException {
+    @NonNull
+    public ComputerLauncher createComputerLauncher(@CheckForNull EnvVars env) throws URISyntaxException, IOException {
         int sz = jenkins.getNodes().size();
         return new SimpleCommandLauncher(
-                String.format("\"%s/bin/java\" %s %s -jar \"%s\"",
+                String.format("\"%s/bin/java\" %s %s -Xmx512m -XX:+PrintCommandLineFlags -jar \"%s\"",
                         System.getProperty("java.home"),
                         SLAVE_DEBUG_PORT>0 ? " -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address="+(SLAVE_DEBUG_PORT+sz): "",
                         "-Djava.awt.headless=true",
@@ -1057,6 +1093,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
      * Create a new slave on the local host and wait for it to come online
      * before returning.
      */
+    @NonNull
     public DumbSlave createOnlineSlave() throws Exception {
         return createOnlineSlave(null);
     }
@@ -1065,7 +1102,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
      * Create a new slave on the local host and wait for it to come online
      * before returning.
      */
-    public DumbSlave createOnlineSlave(Label l) throws Exception {
+    @NonNull
+    public DumbSlave createOnlineSlave(@CheckForNull Label l) throws Exception {
         return createOnlineSlave(l, null);
     }
 
@@ -1074,13 +1112,31 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
      * before returning
      * @see #waitOnline
      */
+    @NonNull
     @SuppressWarnings({"deprecation"})
-    public DumbSlave createOnlineSlave(Label l, EnvVars env) throws Exception {
+    public DumbSlave createOnlineSlave(@CheckForNull Label l, @CheckForNull EnvVars env) throws Exception {
         DumbSlave s = createSlave(l, env);
         waitOnline(s);
         return s;
     }
 
+    /**
+     * Use the new API token system introduced in 2.129 to generate a token for the given user.
+     */
+    public @NonNull String createApiToken(@NonNull User user) {
+        ApiTokenProperty apiTokenProperty = user.getProperty(ApiTokenProperty.class);
+        try {
+            if (apiTokenProperty == null) {
+                apiTokenProperty = new ApiTokenProperty();
+                user.addProperty(apiTokenProperty);
+            }
+            String tokenRandomName = "TestToken_" + (int) Math.floor(Math.random() * 1_000_000);
+            return apiTokenProperty.generateNewToken(tokenRandomName).plainValue;
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
+    }
+    
     /**
      * Waits for a newly created slave to come online.
      * @see #createSlave()
@@ -1099,11 +1155,15 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         });
         try {
             if (s.getLauncher().isLaunchSupported()) {
+                LOGGER.info(() -> "Launching " + s.getNodeName() + "…");
                 computer.connect(false).get();
+                LOGGER.info(() -> "…finished launching " + s.getNodeName() + ".");
             } else {
+                LOGGER.info(() -> "Waiting for " + s.getNodeName() + " to come online…");
                 while (!computer.isOnline()) {
                     Thread.sleep(100);
                 }
+                LOGGER.info(() -> "…" + s.getNodeName() + " is now online.");
             }
         } finally {
             run.set(false);
@@ -1152,9 +1212,9 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
                 @Override public void close() throws SecurityException {}
             };
             handler.setLevel(Level.ALL);
-            loggers.entrySet().forEach(e -> {
-                Logger logger = Logger.getLogger(e.getKey());
-                logger.setLevel(e.getValue());
+            loggers.forEach((key, value) -> {
+                Logger logger = Logger.getLogger(key);
+                logger.setLevel(value);
                 logger.addHandler(handler);
                 loggerReferences.add(logger);
             });
@@ -1171,7 +1231,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
      */
     public void interactiveBreak() throws Exception {
         System.out.println("Jenkins is running at " + getURL());
-        new BufferedReader(new InputStreamReader(System.in)).readLine();
+        new BufferedReader(new InputStreamReader(System.in, Charset.defaultCharset())).readLine();
     }
 
     /**
@@ -1188,7 +1248,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
      * from an browser, while developing a test case.
      */
     public void pause() throws IOException {
-        new BufferedReader(new InputStreamReader(System.in)).readLine();
+        new BufferedReader(new InputStreamReader(System.in, Charset.defaultCharset())).readLine();
     }
 
     /**
@@ -1199,35 +1259,25 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     }
 
     /**
-     * Get JSON from A Jenkins endpoint.
-     * @param path The endpoint URL.
-     * @return The JSON.
+     * Get JSON from a Jenkins relative endpoint. Create a new default webclient. If you want to configure the
+     * webclient, for example to set a token for authentication, or accept other HTTP responses than 200, you can use
+     * {@link WebClient#getJSON(String)} directly.
+     *
+     * @param path relative path, should not start with '/'
+     * @return The JSON response from server.
      */
-    public JSONWebResponse getJSON(@Nonnull String path) throws IOException {
-        assert !path.startsWith("/");
-
+    public JSONWebResponse getJSON(@NonNull String path) throws IOException {
         JenkinsRule.WebClient webClient = createWebClient();
-        Page runsPage = null;
-        try {
-            runsPage = webClient.goTo(path, "application/json");
-        } catch (SAXException e) {
-            // goTo shouldn't be throwing a SAXException for JSON.
-            throw new IllegalStateException("Unexpected SAXException.", e);
-        }
-        WebResponse webResponse = runsPage.getWebResponse();
-
-        return new JSONWebResponse(webResponse);
+        return webClient.getJSON(path);
     }
 
     /**
-     * POST a JSON payload to a URL on the underlying Jenkins instance.
+     * POST a JSON payload to a URL on the underlying Jenkins instance using the crumb.
      * @param path The url path on Jenkins.
      * @param json An object that produces a JSON string from it's {@code toString} method.
      * @return A JSON response.
-     * @throws IOException
-     * @throws SAXException
      */
-    public JSONWebResponse postJSON(@Nonnull String path, @Nonnull Object json) throws IOException, SAXException {
+    public JSONWebResponse postJSON(@NonNull String path, @NonNull Object json) throws IOException, SAXException {
         assert !path.startsWith("/");
 
         URL postUrl = new URL(getURL().toExternalForm() + path);
@@ -1243,7 +1293,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
             NameValuePair crumb = getCrumbHeaderNVP();
             conn.setRequestProperty(crumb.getName(), crumb.getValue());
 
-            byte[] content = json.toString().getBytes(UTF8);
+            byte[] content = json.toString().getBytes(StandardCharsets.UTF_8);
             conn.setRequestProperty("Content-Length", String.valueOf(content.length));
             try (OutputStream os = conn.getOutputStream()) {
                 os.write(content);
@@ -1251,16 +1301,9 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
             }
 
             WebResponseData webResponseData;
-            InputStream responseStream = conn.getInputStream();
-            try {
-                if (responseStream != null) {
-                    byte[] bytes = IOUtils.toByteArray(responseStream);
-                    webResponseData = new WebResponseData(bytes, conn.getResponseCode(), conn.getResponseMessage(), extractHeaders(conn));
-                } else {
-                    webResponseData = new WebResponseData(new byte[0], conn.getResponseCode(), conn.getResponseMessage(), extractHeaders(conn));
-                }
-            } finally {
-                IOUtils.closeQuietly(responseStream);
+            try (InputStream responseStream = conn.getInputStream()) {
+                byte[] bytes = IOUtils.toByteArray(responseStream);
+                webResponseData = new WebResponseData(bytes, conn.getResponseCode(), conn.getResponseMessage(), extractHeaders(conn));
             }
 
             WebResponse webResponse = new WebResponse(webResponseData, postUrl, HttpMethod.POST, (System.currentTimeMillis() - startTime));
@@ -1272,7 +1315,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     }
 
     private List<NameValuePair> extractHeaders(HttpURLConnection conn) {
-        List<NameValuePair> headers = new ArrayList<NameValuePair>();
+        List<NameValuePair> headers = new ArrayList<>();
         Set<Map.Entry<String,List<String>>> headerFields = conn.getHeaderFields().entrySet();
         for (Map.Entry<String,List<String>> headerField : headerFields) {
             String name = headerField.getKey();
@@ -1314,7 +1357,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
      * Loads a configuration page and submits it without any modifications, to
      * perform a round-trip configuration test.
      * <p>
-     * See http://wiki.jenkins-ci.org/display/JENKINS/Unit+Test#UnitTest-Configurationroundtriptesting
+     * See https://www.jenkins.io/doc/developer/testing/#configuration-round-trip-testing
      */
     public <P extends Item> P configRoundtrip(P job) throws Exception {
         submit(createWebClient().getPage(job, "configure").getFormByName("config"));
@@ -1362,6 +1405,23 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         return view;
     }
 
+    /**
+     * Performs a configuration round-trip testing for a cloud.
+     * The given cloud is added to the cloud list of Jenkins.
+     * <p>
+     * If a cloud with the same name already exists, then this old one will be replaced by the given one.
+     */
+    public <C extends Cloud> C configRoundtrip(C cloud) throws Exception {
+        Cloud cloudConfig = jenkins.getCloud(cloud.name);
+        if (cloudConfig != null) {
+            jenkins.clouds.remove(cloudConfig);
+        }
+        jenkins.clouds.add(cloud);
+        jenkins.save();
+        submit(createWebClient().goTo("configureClouds/").getFormByName("config"));
+        return (C)jenkins.getCloud(cloud.name);
+    }
+
 
     /**
      * Asserts that the outcome of the build is a specific outcome.
@@ -1377,7 +1437,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     }
 
     public <R extends Run> R assertBuildStatus(Result status, Future<? extends R> r) throws Exception {
-        assertThat("build was actually scheduled", r, Matchers.notNullValue());
+        assertThat("build was actually scheduled", r, notNullValue());
         return assertBuildStatus(status, r.get());
     }
 
@@ -1394,7 +1454,6 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
     /** Assert that the specified page can be served with a "good" HTTP status,
      * eg, the page is not missing and can be served without a server error
-     * @param page
      */
     public void assertGoodStatus(Page page) {
         assertThat(isGoodHttpStatus(page.getWebResponse().getStatusCode()), is(true));
@@ -1410,8 +1469,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         return assertBuildStatus(Result.SUCCESS, r);
     }
 
-    @Nonnull
-    public <J extends Job<J,R> & ParameterizedJobMixIn.ParameterizedJob<J,R>,R extends Run<J,R> & Queue.Executable> R buildAndAssertSuccess(@Nonnull J job) throws Exception {
+    @NonNull
+    public <J extends Job<J,R> & ParameterizedJobMixIn.ParameterizedJob<J,R>,R extends Run<J,R> & Queue.Executable> R buildAndAssertSuccess(@NonNull J job) throws Exception {
         return buildAndAssertStatus(Result.SUCCESS, job);
     }
 
@@ -1419,8 +1478,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
      * Runs specified job and asserts that in finished with given build result.
      * @since TODO
      */
-    @Nonnull
-    public <J extends Job<J,R> & ParameterizedJobMixIn.ParameterizedJob<J,R>,R extends Run<J,R> & Queue.Executable> R buildAndAssertStatus(@Nonnull Result status, @Nonnull J job) throws Exception {
+    @NonNull
+    public <J extends Job<J,R> & ParameterizedJobMixIn.ParameterizedJob<J,R>,R extends Run<J,R> & Queue.Executable> R buildAndAssertStatus(@NonNull Result status, @NonNull J job) throws Exception {
         final QueueTaskFuture<R> f = new ParameterizedJobMixIn<J, R>() {
             @Override protected J asJob() {
                 return job;
@@ -1432,8 +1491,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     /**
      * Avoids need for cumbersome {@code this.<J,R>buildAndAssertSuccess(...)} type hints under JDK 7 javac (and supposedly also IntelliJ).
      */
-    @Nonnull
-    public FreeStyleBuild buildAndAssertSuccess(@Nonnull FreeStyleProject job) throws Exception {
+    @NonNull
+    public FreeStyleBuild buildAndAssertSuccess(@NonNull FreeStyleProject job) throws Exception {
         return assertBuildStatusSuccess(job.scheduleBuild2(0));
     }
 
@@ -1463,7 +1522,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         } catch (FileNotFoundException x) {
             return ""; // log file not yet created, OK
         }
-        return baos.toString(run.getCharset().name());
+        return baos.toString(run.getCharset());
     }
 
     /**
@@ -1508,11 +1567,9 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     /** Asserts that the XPath matches the contents of a DomNode page. This
      * variant of assertXPath(HtmlPage page, String xpath) allows us to
      * examine XmlPages.
-     * @param page
-     * @param xpath
      */
     public void assertXPath(DomNode page, String xpath) {
-        List<? extends Object> nodes = page.getByXPath(xpath);
+        List<?> nodes = page.getByXPath(xpath);
         assertThat("There should be an object that matches XPath:" + xpath, nodes.isEmpty(), is(false));
     }
 
@@ -1533,11 +1590,11 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
         org.w3c.dom.Node n = (org.w3c.dom.Node) node;
         String textString = n.getTextContent();
-        assertTrue("needle found in haystack", textString.contains(needle));
+        assertThat(textString, containsString(needle));
     }
 
     public void assertXPathResultsContainText(DomNode page, String xpath, String needle) {
-        List<? extends Object> nodes = page.getByXPath(xpath);
+        List<?> nodes = page.getByXPath(xpath);
         assertThat("no nodes matching xpath found", nodes.isEmpty(), is(false));
         boolean found = false;
         for (Object o : nodes) {
@@ -1572,11 +1629,11 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
 
     public void assertStringContains(String message, String haystack, String needle) {
-        assertThat(message, haystack, Matchers.containsString(needle));
+        assertThat(message, haystack, containsString(needle));
     }
 
     public void assertStringContains(String haystack, String needle) {
-        assertThat(haystack, Matchers.containsString(needle));
+        assertThat(haystack, containsString(needle));
     }
 
     /**
@@ -1588,14 +1645,15 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
      *      ','-separated list of properties whose help files should exist.
      */
     public void assertHelpExists(final Class<? extends Describable> type, final String properties) throws Exception {
-        executeOnServer(new Callable<Object>() {
+        executeOnServer(new Callable<>() {
+            @Override
             public Object call() throws Exception {
                 Descriptor d = jenkins.getDescriptor(type);
                 WebClient wc = createWebClient();
                 for (String property : listProperties(properties)) {
                     String url = d.getHelpFile(property);
                     assertThat("Help file for the property " + property + " is missing on " + type, url,
-                            Matchers.notNullValue());
+                            notNullValue());
                     wc.goTo(url); // make sure it successfully loads
                 }
                 return null;
@@ -1670,7 +1728,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
      *
      * <p>
      * This method takes two objects that have properties (getXyz, isXyz, or just the public xyz field),
-     * and makes sure that the property values for each given property are equals (by using {@link org.junit.Assert#assertThat(Object, org.hamcrest.Matcher)})
+     * and makes sure that the property values for each given property are equals (by using {@link org.hamcrest.MatcherAssert#assertThat(Object, org.hamcrest.Matcher)})
      *
      * <p>
      * Property values can be null on both objects, and that is OK, but passing in a property that doesn't
@@ -1738,7 +1796,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
         Constructor<?> lc = findDataBoundConstructor(lhs.getClass());
         Constructor<?> rc = findDataBoundConstructor(rhs.getClass());
-        assertThat("Data bound constructor mismatch. Different type?", (Constructor)rc, is((Constructor)lc));
+        assertThat("Data bound constructor mismatch. Different type?", (Constructor)rc, is(lc));
 
         String[] names = ClassDescriptor.loadParameterNames(lc);
         Class<?>[] types = lc.getParameterTypes();
@@ -1748,8 +1806,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         Map<String, Class<?>> lprops = extractDataBoundSetterProperties(lhs.getClass());
         Map<String, Class<?>> rprops = extractDataBoundSetterProperties(rhs.getClass());
         assertThat("Data bound setters mismatch. Different type?", lprops, is(rprops));
-        List<String> setterNames = new ArrayList<String>();
-        List<Class<?>> setterTypes = new ArrayList<Class<?>>();
+        List<String> setterNames = new ArrayList<>();
+        List<Class<?>> setterTypes = new ArrayList<>();
         for (Map.Entry<String, Class<?>> e : lprops.entrySet()) {
             setterNames.add(e.getKey());
             setterTypes.add(e.getValue());
@@ -1757,8 +1815,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         assertEqualProperties(lhs, rhs, setterNames.toArray(new String[0]), setterTypes.toArray(new Class<?>[0]));
     }
 
-    private void assertEqualProperties(@Nonnull Object lhs, @Nonnull Object rhs, @Nonnull String[] names, @Nonnull Class<?>[] types) throws InvocationTargetException, NoSuchMethodException, IllegalAccessException, Exception {
-        List<String> primitiveProperties = new ArrayList<String>();
+    private void assertEqualProperties(@NonNull Object lhs, @NonNull Object rhs, @NonNull String[] names, @NonNull Class<?>[] types) throws InvocationTargetException, NoSuchMethodException, IllegalAccessException, Exception {
+        List<String> primitiveProperties = new ArrayList<>();
 
         for (int i=0; i<types.length; i++) {
             Object lv = ReflectionUtils.getPublicProperty(lhs, names[i]);
@@ -1794,9 +1852,9 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
             assertEqualBeans(lhs,rhs,Util.join(primitiveProperties,","));
     }
 
-    @Nonnull
-    private Map<String, Class<?>> extractDataBoundSetterProperties(@Nonnull Class<?> c) {
-        Map<String, Class<?>> ret = new HashMap<String, Class<?>>();
+    @NonNull
+    private Map<String, Class<?>> extractDataBoundSetterProperties(@NonNull Class<?> c) {
+        Map<String, Class<?>> ret = new HashMap<>();
         for ( ;c != null; c = c.getSuperclass()) {
 
             for (Field f: c.getDeclaredFields()) {
@@ -1822,7 +1880,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     }
 
     @CheckForNull
-    private AbstractMap.SimpleEntry<String, Class<?>> extractDataBoundSetter(@Nonnull Method m) {
+    private AbstractMap.SimpleEntry<String, Class<?>> extractDataBoundSetter(@NonNull Method m) {
         // See org.kohsuke.stapler.RequestImpl::findDataBoundSetter
         if (!Modifier.isPublic(m.getModifiers())) {
             return null;
@@ -1838,7 +1896,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         }
         
         // setXyz -> xyz
-        return new AbstractMap.SimpleEntry<String, Class<?>>(
+        return new AbstractMap.SimpleEntry<>(
                 Introspector.decapitalize(m.getName().substring(3)),
                 m.getParameterTypes()[0]
         );
@@ -1907,7 +1965,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
                 return;
 
             if (System.currentTimeMillis()-startTime > timeout) {
-                List<Queue.Executable> building = new ArrayList<Queue.Executable>();
+                List<Queue.Executable> building = new ArrayList<>();
                 for (Computer c : jenkins.getComputers()) {
                     for (Executor e : c.getExecutors()) {
                         if (e.isBusy())
@@ -1920,7 +1978,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
                 }
                 dumpThreads();
                 throw new AssertionError(String.format("Jenkins is still doing something after %dms: queue=%s building=%s",
-                        timeout, Arrays.asList(jenkins.getQueue().getItems()), building));
+                        timeout, List.of(jenkins.getQueue().getItems()), building));
             }
         }
     }
@@ -1947,11 +2005,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
                 if(r==null)     continue;
                 final JenkinsRecipe.Runner runner = r.value().newInstance();
                 recipes.add(runner);
-                tearDowns.add(new LenientRunnable() {
-                    public void run() throws Exception {
-                        runner.tearDown(JenkinsRule.this,a);
-                    }
-                });
+                tearDowns.add(() -> runner.tearDown(JenkinsRule.this, a));
                 runner.setup(this,a);
             }
         } catch (NoSuchMethodException e) {
@@ -1960,12 +2014,12 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     }
 
     /**
-     * If this test harness is launched for a Jenkins plugin, locate the <tt>target/test-classes/the.jpl</tt>
+     * If this test harness is launched for a Jenkins plugin, locate the {@code target/test-classes/the.jpl}
      * and add a recipe to install that to the new Jenkins.
      *
      * <p>
-     * This file is created by <tt>maven-hpi-plugin</tt> at the testCompile phase when the current
-     * packaging is <tt>jpi</tt>.
+     * This file is created by {@code maven-hpi-plugin} at the testCompile phase when the current
+     * packaging is {@code jpi}.
      */
     public void recipeLoadCurrentPlugin() throws Exception {
     	final Enumeration<URL> jpls = getClass().getClassLoader().getResources("the.jpl");
@@ -1985,7 +2039,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     }
 
     static void decorateHomeFor(File home, List<URL> all) throws Exception {
-        List<Jpl> jpls = new ArrayList<Jpl>();
+        List<Jpl> jpls = new ArrayList<>();
         for (URL hpl : all) {
             Jpl jpl = new Jpl(home, hpl);
             jpl.loadManifest();
@@ -2164,7 +2218,9 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
      * This is to assist Groovy test clients who are incapable of instantiating the inner classes properly.
      */
     public WebClient createWebClient() {
-        return new WebClient();
+        WebClient webClient = new WebClient();
+        webClient.getOptions().setFetchPolyfillEnabled(true);
+        return webClient;
     }
 
     /**
@@ -2174,7 +2230,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
     public class WebClient extends com.gargoylesoftware.htmlunit.WebClient {
         private static final long serialVersionUID = -7944895389154288881L;
 
-        private List<WebResponseListener> webResponseListeners = new ArrayList<WebResponseListener>();
+        private List<WebResponseListener> webResponseListeners = new ArrayList<>();
 
         public WebClient() {
             super(BrowserVersion.BEST_SUPPORTED);
@@ -2185,6 +2241,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
             // make ajax calls run as post-action for predictable behaviors that simplify debugging
             setAjaxController(new AjaxController() {
                 private static final long serialVersionUID = -76034615893907856L;
+                @Override
                 public boolean processSynchron(HtmlPage page, WebRequest settings, boolean async) {
                     return false;
                 }
@@ -2212,10 +2269,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
                 }
 
                 private boolean ignore(final CSSParseException exception) {
-                    String uri = exception.getURI();
-                    return uri.contains("/yui/")
-                        // TODO JENKINS-14749: these are a mess today, and we know that
-                        || uri.contains("/css/style.css") || uri.contains("/css/responsive-grid.css");
+                    return exception.getURI().contains("/yui/");
                 }
             });
 
@@ -2225,11 +2279,13 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
             if (javaScriptEngine instanceof JavaScriptEngine) {
                 ((JavaScriptEngine) javaScriptEngine).getContextFactory()
                         .addListener(new ContextFactory.Listener() {
+                            @Override
                             public void contextCreated(Context cx) {
                                 if (cx.getDebugger() == null)
                                     cx.setDebugger(jsDebugger, null);
                             }
 
+                            @Override
                             public void contextReleased(Context cx) {
                             }
                         });
@@ -2271,6 +2327,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
          * @see WebClientOptions#isJavaScriptEnabled()
          * @since 2.0
          */
+        @Override
         public boolean isJavaScriptEnabled() {
             return getOptions().isJavaScriptEnabled();
         }
@@ -2432,17 +2489,18 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
          */
         public <V> V executeOnServer(final Callable<V> c) throws Exception {
             final Exception[] t = new Exception[1];
-            final List<V> r = new ArrayList<V>(1);  // size 1 list
+            final AtomicReference<V> r = new AtomicReference<>();
 
             ClosureExecuterAction cea = jenkins.getExtensionList(RootAction.class).get(ClosureExecuterAction.class);
             UUID id = UUID.randomUUID();
             cea.add(id,new Runnable() {
+                @Override
                 public void run() {
                     try {
                         StaplerResponse rsp = Stapler.getCurrentResponse();
                         rsp.setStatus(200);
                         rsp.setContentType("text/html");
-                        r.add(c.call());
+                        r.set(c.call());
                     } catch (Exception e) {
                         t[0] = e;
                     }
@@ -2452,7 +2510,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
             if (t[0]!=null)
                 throw t[0];
-            return r.get(0);
+            return r.get();
         }
 
         public HtmlPage search(String q) throws IOException, SAXException {
@@ -2500,7 +2558,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         }
 
         public HtmlPage getPage(View view, String relative) throws IOException, SAXException {
-            return goTo(view.getUrl()+relative);
+            return goTo(view.getViewUrl() + relative);
         }
 
         /**
@@ -2569,8 +2627,6 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
          * assertXPath(DomNode page, String xpath)
          * @param path   the path part of the url to visit
          * @return  the XmlPage found at that url
-         * @throws IOException
-         * @throws SAXException
          */
         public XmlPage goToXml(String path) throws IOException, SAXException {
             Page page = goTo(path, "application/xml");
@@ -2641,8 +2697,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
          * Add the "Authorization" header with Basic credentials derived from login and password using Base64
          * @since 2.32
          */
-        public @Nonnull WebClient withBasicCredentials(@Nonnull String login, @Nonnull String passwordOrToken) {
-            String authCode = new String(Base64.getEncoder().encode((login + ":" + passwordOrToken).getBytes(StandardCharsets.UTF_8)));
+        public @NonNull WebClient withBasicCredentials(@NonNull String login, @NonNull String passwordOrToken) {
+            String authCode = Base64.getEncoder().encodeToString((login + ":" + passwordOrToken).getBytes(StandardCharsets.UTF_8));
 
             addRequestHeader(HttpHeaders.AUTHORIZATION, "Basic " + authCode);
             return this;
@@ -2653,17 +2709,20 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
          * Add the "Authorization" header with Basic credentials derived from login using Base64
          * @since 2.32
          */
-        public @Nonnull WebClient withBasicCredentials(@Nonnull String loginAndPassword){
+        public @NonNull WebClient withBasicCredentials(@NonNull String loginAndPassword){
             return withBasicCredentials(loginAndPassword, loginAndPassword);
         }
 
         /**
-         * Retrieve the {@link ApiTokenProperty} from the user, derive credentials from it and place it in Basic authorization header
+         * Retrieve the {@link ApiTokenProperty} from the user, derive credentials from it and place it in Basic authorization header.
+         * If there is not available token it will generate one using the new system.
+         *
          * @see #withBasicCredentials(String, String)
-         * @since 2.32
+         * @since 2.32 (since TODO it creates a new token everytime it's called)
          */
-        public @Nonnull WebClient withBasicApiToken(@Nonnull User user){
-            return withBasicCredentials(user.getId(), user.getProperty(ApiTokenProperty.class).getApiToken());
+        public @NonNull WebClient withBasicApiToken(@NonNull User user){
+            String apiToken = JenkinsRule.this.createApiToken(user);
+            return withBasicCredentials(user.getId(), apiToken);
         }
 
         /**
@@ -2671,9 +2730,8 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
          * @see #withBasicApiToken(User)
          * @since 2.32
          */
-        public @Nonnull WebClient withBasicApiToken(@Nonnull String userId){
-            User user = User.getById(userId, false);
-            assertNotNull("The userId must correspond to an already created User", user);
+        public @NonNull WebClient withBasicApiToken(@NonNull String userId){
+            User user = User.getById(userId, true);
             return withBasicApiToken(user);
         }
 
@@ -2716,6 +2774,75 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
             return dim;
         }
+
+        /**
+         * Get JSON from a Jenkins relative endpoint.
+         * You can preconfigure the web client for example to set a token for authentication, or accept error HTTP status
+         * before calling this method.
+         *
+         * @param path relative path, should not start with '/'
+         * @return The JSON response from server.
+         * @throws IOException
+         */
+        public JSONWebResponse getJSON(@NonNull String path) throws IOException {
+            assert !path.startsWith("/");
+
+            URL URLtoCall = new URL(getURL(), path);
+            WebRequest getRequest = new WebRequest(URLtoCall, HttpMethod.GET);
+            getRequest.setAdditionalHeader("Content-Type", "application/json");
+            getRequest.setAdditionalHeader("Accept", "application/json");
+            getRequest.setAdditionalHeader("Accept-Encoding", "*");
+
+            return new JSONWebResponse(loadWebResponse(getRequest));
+        }
+
+        /**
+         * Send JSON content to a Jenkins relative endpoint.
+         * You can preconfigure the web client for example to set a token for authentication, or accept error HTTP status
+         * before calling this method.
+         *
+         * @param path relative path, should not start with '/'
+         * @param json the json payload to send
+         * @return The JSON response from server.
+         * @throws IOException
+         */
+        public JSONWebResponse putJSON(@NonNull String path, @NonNull JSON json) throws IOException {
+            assert !path.startsWith("/");
+
+            URL URLtoCall = new URL(getURL(), path);
+            WebRequest putRequest = new WebRequest(URLtoCall, HttpMethod.PUT);
+            putRequest.setRequestBody(json.toString());
+            putRequest.setAdditionalHeader("Content-Type", "application/json");
+            putRequest.setAdditionalHeader("Accept", "application/json");
+            putRequest.setAdditionalHeader("Accept-Encoding", "*");
+
+            return new JSONWebResponse(loadWebResponse(putRequest));
+        }
+
+        /**
+         * POST JSON content to a Jenkins relative endpoint.
+         * You can preconfigure the web client for example to set a token for authentication or pass a crumb before calling this method.
+         *
+         * @param path relative path, should not start with '/'
+         * @param json the json payload to send
+         * @return The JSON response from server.
+         * @throws IOException
+         */
+        public JSONWebResponse postJSON(@NonNull String path, @NonNull JSON json) throws IOException {
+            assert !path.startsWith("/");
+
+            URL URLtoCall = new URL(getURL(), path);
+            WebRequest postRequest = new WebRequest(URLtoCall, HttpMethod.POST);
+
+            postRequest.setAdditionalHeader("Content-Type", "application/json");
+            postRequest.setAdditionalHeader("Accept", "application/json");
+            postRequest.setAdditionalHeader("Accept-Encoding", "*");
+
+            postRequest.setRequestBody(json.toString());
+
+            return new JSONWebResponse(loadWebResponse(postRequest));
+        }
+
     }
 
     // needs to keep reference, or it gets GC-ed.
@@ -2753,6 +2880,7 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
         // prototype.js calls this method all the time, so ignore this warning.
         XML_HTTP_REQUEST_LOGGER.setFilter(new Filter() {
+            @Override
             public boolean isLoggable(LogRecord record) {
                 return !record.getMessage().contains("XMLHttpRequest.getResponseHeader() was called before the response was available.");
             }
@@ -2775,7 +2903,9 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
 
     private static final Logger LOGGER = Logger.getLogger(HudsonTestCase.class.getName());
 
-    public static final List<ToolProperty<?>> NO_PROPERTIES = Collections.emptyList();
+    public static final List<ToolProperty<?>> NO_PROPERTIES = List.of();
+
+    private static final SecureRandom RANDOM = new SecureRandom();
 
     /**
      * Specify this to a TCP/IP port number to have slaves started with the debugger.
@@ -2793,21 +2923,13 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
         MIME_TYPES.addMimeMapping("js","application/javascript");
         Functions.DEBUG_YUI = true;
 
-        // during the unit test, predictably releasing classloader is important to avoid
-        // file descriptor leak.
-        ClassicPluginStrategy.useAntClassLoader = true;
-
-        // DNS multicast support takes up a lot of time during tests, so just disable it altogether
-        // this also prevents tests from falsely advertising Hudson
-        DNSMultiCast.disabled = true;
-
-        try {
-            GNUCLibrary.LIBC.unsetenv("MAVEN_OPTS");
-            GNUCLibrary.LIBC.unsetenv("MAVEN_DEBUG_OPTS");
-        } catch (LinkageError x) {
-            // skip; TODO 1.630+ can use Functions.isGlibcSupported
-        } catch (Exception e) {
-            LOGGER.log(Level.WARNING,"Failed to cancel out MAVEN_OPTS",e);
+        if (Functions.isGlibcSupported()) {
+            try {
+                GNUCLibrary.LIBC.unsetenv("MAVEN_OPTS");
+                GNUCLibrary.LIBC.unsetenv("MAVEN_DEBUG_OPTS");
+            } catch (Exception e) {
+                LOGGER.log(Level.WARNING, "Failed to cancel out MAVEN_OPTS", e);
+            }
         }
     }
 
@@ -2833,10 +2955,11 @@ public class JenkinsRule implements TestRule, MethodRule, RootAction {
             }
 
             @Override
-            public BuildWrapper newInstance(StaplerRequest req, JSONObject formData) {
+            public BuildWrapper newInstance(StaplerRequest req, @NonNull JSONObject formData) {
                 throw new UnsupportedOperationException();
             }
 
+            @NonNull
             @Override
             public String getDisplayName() {
                 return "TestBuildWrapper";
