@@ -25,7 +25,6 @@
 package org.jvnet.hudson.test;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import hudson.util.VersionNumber;
 import java.lang.ref.Reference;
 import java.lang.ref.SoftReference;
 import java.lang.ref.WeakReference;
@@ -78,7 +77,7 @@ public class MemoryAssert {
     public static void assertHeapUsage(Object o, int max) throws Exception {
         // TODO could use ScannerUtils.recursiveSizeOf here
         CountingVisitor v = new CountingVisitor();
-        ScannerUtils.scan(ScannerUtils.skipNonStrongReferencesFilter(), v, Collections.singleton(o), false);
+        ScannerUtils.scan(ScannerUtils.skipNonStrongReferencesFilter(), v, Set.of(o), false);
         int memoryUsage = v.getTotalSize();
         assertTrue(o + " consumes " + memoryUsage + " bytes of heap, " + (memoryUsage - max) + " over the limit of " + max, memoryUsage <= max);
     }
@@ -128,12 +127,12 @@ public class MemoryAssert {
             f = ScannerUtils.compoundFilter(fs);
         }
         CountingVisitor v1 = new CountingVisitor();
-        ScannerUtils.scan(f, v1, Collections.singleton(Jenkins.getInstance()), false);
+        ScannerUtils.scan(f, v1, Set.of(Jenkins.get()), false);
         Set<Class<?>> old = v1.getClasses();
         callable.call();
         CountingVisitor v2 = new CountingVisitor();
-        ScannerUtils.scan(f, v2, Collections.singleton(Jenkins.getInstance()), false);
-        List<HistogramElement> elements = new ArrayList<HistogramElement>();
+        ScannerUtils.scan(f, v2, Set.of(Jenkins.get()), false);
+        List<HistogramElement> elements = new ArrayList<>();
         for (Class<?> c : v2.getClasses()) {
             int delta = v2.getCountForClass(c) - (old.contains(c) ? v1.getCountForClass(c) : 0);
             if (delta > 0) {
@@ -150,7 +149,6 @@ public class MemoryAssert {
     }
 
     /**
-     * <strong>Assumes Java runtime is &le; Java 8. I.e. tests will be skipped if Java 9+</strong>
      * Forces GC by causing an OOM and then verifies the given {@link WeakReference} has been garbage collected.
      * @param reference object used to verify garbage collection.
      * @param allowSoft if true, pass even if {@link SoftReference}s apparently needed to be cleared by forcing an {@link OutOfMemoryError};
@@ -158,14 +156,13 @@ public class MemoryAssert {
      */
     @SuppressFBWarnings("DLS_DEAD_LOCAL_STORE_OF_NULL")
     public static void assertGC(WeakReference<?> reference, boolean allowSoft) {
-        // Disabled on Java 9+, because below will call Netbeans Insane Engine, which in turns tries to call setAccessible
-        /* TODO version-number 1.6+:
-        assumeTrue(JavaSpecificationVersion.forCurrentJVM().isOlderThanOrEqualTo(JavaSpecificationVersion.JAVA_8));
-        */
-        assumeTrue(new VersionNumber(System.getProperty("java.specification.version")).isOlderThan(new VersionNumber("9")));
+        Runtime.Version runtimeVersion = Runtime.version();
+        assumeTrue(
+                "TODO JENKINS-67974 works on Java 17 but not 11",
+                runtimeVersion.feature() >= 17);
         assertTrue(true); reference.get(); // preload any needed classes!
         System.err.println("Trying to collect " + reference.get() + "…");
-        Set<Object[]> objects = new HashSet<Object[]>();
+        Set<Object[]> objects = new HashSet<>();
         int size = 1024;
         String softErr = null;
         while (reference.get() != null) {
@@ -184,7 +181,7 @@ public class MemoryAssert {
             if (!allowSoft) {
                 Object obj = reference.get();
                 if (obj != null) {
-                    softErr = "Apparent soft references to " + obj + ": " + fromRoots(Collections.singleton(obj), null, null, new Filter() {
+                    softErr = "Apparent soft references to " + obj + ": " + fromRoots(Set.of(obj), null, null, new Filter() {
                         final Field referent;
                         {
                             try {
@@ -196,7 +193,7 @@ public class MemoryAssert {
                         @Override public boolean accept(Object obj, Object referredFrom, Field reference) {
                             return !referent.equals(reference) || !(referredFrom instanceof WeakReference);
                         }
-                    }) + "; apparent weak references: " + fromRoots(Collections.singleton(obj), null, null, ScannerUtils.skipObjectsFilter(Collections.singleton(reference), true));
+                    }) + "; apparent weak references: " + fromRoots(Set.of(obj), null, null, ScannerUtils.skipObjectsFilter(Set.of(reference), true));
                     System.err.println(softErr);
                 }
             }
@@ -208,12 +205,12 @@ public class MemoryAssert {
             System.err.println("Successfully collected.");
         } else {
             System.err.println("Failed to collect " + obj + ", looking for strong references…");
-            Map<Object,Path> rootRefs = fromRoots(Collections.singleton(obj), null, null, ScannerUtils.skipNonStrongReferencesFilter());
+            Map<Object,Path> rootRefs = fromRoots(Set.of(obj), null, null, ScannerUtils.skipNonStrongReferencesFilter());
             if (!rootRefs.isEmpty()) {
                 fail(rootRefs.toString());
             } else {
                 System.err.println("Did not find any strong references to " + obj + ", looking for soft references…");
-                rootRefs = fromRoots(Collections.singleton(obj), null, null, new Filter() {
+                rootRefs = fromRoots(Set.of(obj), null, null, new Filter() {
                     final Field referent;
                     {
                         try {
@@ -230,7 +227,7 @@ public class MemoryAssert {
                     fail(rootRefs.toString());
                 } else {
                     System.err.println("Did not find any soft references to " + obj + ", looking for weak references…");
-                    rootRefs = fromRoots(Collections.singleton(obj), null, null, ScannerUtils.skipObjectsFilter(Collections.singleton(reference), true));
+                    rootRefs = fromRoots(Set.of(obj), null, null, ScannerUtils.skipObjectsFilter(Set.of(reference), true));
                     if (!rootRefs.isEmpty()) {
                         fail(rootRefs.toString());
                     } else {
@@ -253,7 +250,7 @@ public class MemoryAssert {
             // * to recognizeClass, before queue.add(cls): objects.getID(cls)
             // * to processClass, after recognize(cl): if (objects.isKnown(cl)) visitor.visitObjectReference(objects, cls, cl, null)
             // Also Path.getField confusingly returns "<changed>" when printing the Class → ClassLoader link.
-            List<Class> classes = new ArrayList<Class>();
+            List<Class<?>> classes = new ArrayList<>();
             @Override public void visitClass(Class cls) {
                 getID(cls);
                 super.visitClass(cls);
@@ -266,7 +263,7 @@ public class MemoryAssert {
                 super.visitObject(map, object);
                 if (object instanceof ClassLoader) {
                     if (isKnown(object)) {
-                        for (Class c : classes) {
+                        for (Class<?> c : classes) {
                             if (c.getClassLoader() == object) {
                                 visitObjectReference(this, c, object, /* cannot get a Field for Class.classLoader, but unused here anyway */ null);
                             }
@@ -285,7 +282,7 @@ public class MemoryAssert {
         }
         
         // ScannerUtils.interestingRoots includes our own ClassLoader, thus any static fields in any classes loaded in any visible class…but not in the bootstrap classpath, since this has no ClassLoader object to traverse.
-        Set<Object> rootsHint2 = new HashSet<Object>();
+        Set<Object> rootsHint2 = new HashSet<>();
         if (rootsHint != null) {
             rootsHint2.addAll(rootsHint);
         }
